<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_round_refresh_24"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_back"
        android:icon="@drawable/ic_round_arrow_back_24"
        android:title="@string/back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_open_browser"
        android:icon="@drawable/ic_round_open_in_browser_24"
        android:title="@string/open_browser"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/server_settings"
        app:showAsAction="never" />
</menu>
